実装ブラッシュアップ

--- a/workspace/projects/main/src/app/tab1/tab1.page.html
+++ b/workspace/projects/main/src/app/tab1/tab1.page.html
@@ -6,4 +6,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list>
+    <app-schedule-item *ngFor="let item of data" [data]="item"></app-schedule-item>
+  </ion-list>
+</ion-content>
