--- a/workspace/projects/main/src/app/top/top.page.html
+++ b/workspace/projects/main/src/app/top/top.page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar color="primary" slot="bottom">
     <ion-tab-button tab="day1">
       <ion-icon name="clock"></ion-icon>
       <ion-label>１日目</ion-label>
